# PolyNoel

./: .gitignore  README.md  build.sh
server/: Cargo.toml  Dockerfile  compose.yaml
server/data/categories/: -FDO8-8qSC6B2WuVoiR0Ew.json  -t7XaQqaQTSXtyLMVTu4NQ.json  261ae0db-eaf1-48bf-ba32-11bba742eb10.json  322db247-7002-4879-aa50-3409fca77ef4.json  35b296e1-fb6d-4f54-b686-df22a28db9ce.json  3772c94d-b8a8-4b9d-bfe3-7f6878135c93.json  3TBqNOFKSeKzTLhcAVkPvw.json  46631d5c-dfed-419d-be86-586b47cda561.json  4mJEKnQtQCO6kvkK36fwpw.json  6839bffc-ba17-490d-8c44-ca27ba585e59.json  6e8cbcee-00a6-4f45-a193-cfa833242a98.json  773f83fa-d559-4c01-a74f-d38dde6dae74.json  87f478b0-94d0-48d9-b9ec-03c9960f91e8.json  9c4b3adf-29d9-456e-86d9-2b689e53a16a.json  A0zOLLXsSBu0iQO-d-u8tg.json  DW6X-0JfSNSWGMMXtctBvw.json  H-0oXd77RpuqhVvQ4Ncdlw.json  KZZsR5bdRIC5lTNJeyihTw.json  NM1ksaLOSlSh05_RiQGzNw.json  S-dx9fVvQeaj9Om-UzWcIQ.json  V8SwQvVESCO7wX8XxLoZEA.json  XlQRKavZSpSYJx9TdhHbQQ.json  a5dbf7dd-7c08-49c1-a284-424782aa58c6.json  aa69db2e-bf33-40e6-a7a2-6bd809d9780a.json  c723d5c9-676c-4e66-a812-070ecdf77a8b.json  dc39db50-6c4b-4511-bbcb-06ce3c5224f1.json  f7a3c846-06c0-473c-a7ee-f31877cb6b4c.json  g50JvsbmQim87rIIIRR0Jw.json  htsYCwx9TpKx4BMSlkZrFg.json  lsodjjnFRaG1cGrpTjKWnA.json  nz2fYPxzTaO1fJoZq0u76Q.json  omLQner7Ssm_qB_TXJDkGA.json  s5VNfZ2aSn-89KolES5gmA.json  tSiG_BNZRa-4mXagVF-uYw.json  ufviqKmGQNq5gej63royHg.json  ujYfBCxwSW-UFQmFp8K3qg.json  vAFTd6O2SG671Xx2eR02gw.json  wB8JkNLKTD6LAnQHDVh_Kw.json  xwcnZghnTjqGP1MrYKAVcA.json  ykgyoqp2Q0GZlRRWX1EuJQ.json
server/data/items/: 0266C301.json  0266E701.json  0266EB01.json  02A6E920.json  0323C16E.json  04000ADE.json  0400CA33.json  04026BA0.json  04037B5E.json  0405F866.json  04078906.json  0408099B.json  040AE9EF.json  040AF98D.json  040B0A68.json  040B0AF0.json  040C38C5.json  040DC9B3.json  040F686F.json  040FEA09.json  04104BF6.json  0410CB70.json  04118A9A.json  04132826.json  041519AF.json  04164BA5.json  04168BA7.json  04170A2A.json  04170BC4.json  0418A92D.json  041A5B87.json  041B9BCE.json  041D88A7.json  041DF8A7.json  041F9A0C.json  04207A69.json  0420FB4F.json  0421EB78.json  0422586C.json  04227BBF.json  (+5302 more)
server/dump/: README.md
server/scrap_toysrus/: README.md  get_category.py  get_item.py  patch.py
server/src/: api_doc.rs  main.rs
server/src/child_labor/: mod.rs  routes.rs  task.rs  tasks.rs
server/src/common/: mod.rs  state.rs  user.rs
server/src/data/: categories.json
server/src/santapass/: battlepass.rs  mod.rs  routes.rs  santapass.rs
server/src/toy_catalog/: categories.rs  mod.rs  (+4 more)
(+26238 files in other folders)
