[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"]}
chrono = { version = "0.4.31", features = ["serde"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
rand = "0.8.5"
compact_str = { version = "0.7.1", features = ["serde"] }
simd-json = "0.13.4"
bitcode = { version = "0.5.0", features = ["serde"] }
flate2 = "1.0.17"